[gd_scene load_steps=6 format=3 uid="uid://bqve6ii5dw7us"]

[ext_resource type="Script" path="res://Scenes/Battle/target.gd" id="1_e1e8w"]
[ext_resource type="Texture2D" uid="uid://b0wm53dxrw8t4" path="res://Assets/Tiles/Temp_Asset-Tile_Selected_5.png" id="1_vtpgv"]

[sub_resource type="Animation" id="Animation_po0le"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_en17t"]
resource_name = "float"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -10), Vector2(0, -5), Vector2(0, -10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4v7vd"]
_data = {
"RESET": SubResource("Animation_po0le"),
"float": SubResource("Animation_en17t")
}

[node name="Target" type="Node2D"]
script = ExtResource("1_e1e8w")

[node name="Polygon2D" type="Polygon2D" parent="."]
modulate = Color(0, 0.776471, 0.423529, 0.27451)
position = Vector2(0, -10)
polygon = PackedVector2Array(-50, 10, 0, 40, 43.4243, 13.9454, 50, 10, 0, -20)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.282353, 1, 1, 1)
position = Vector2(0, -10)
texture = ExtResource("1_vtpgv")

[node name="Target_area" type="Area2D" parent="."]
position = Vector2(0, -10)
collision_mask = 17

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Target_area"]
polygon = PackedVector2Array(0, 30, 40, 10, 0, -10, -40, 10)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4v7vd")
}

[node name="Button" type="Button" parent="."]
visible = false
z_index = 1
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = -29.0
text = "PINDAH"

[connection signal="area_entered" from="Target_area" to="." method="_on_target_area_area_entered"]
[connection signal="area_exited" from="Target_area" to="." method="_on_target_area_area_exited"]
[connection signal="body_entered" from="Target_area" to="." method="_on_area_2d_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
